--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,6 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
-dist/
-build/
-*.tsbuildinfo
+# Deno cache and lock files
+.deno/
+deno.lock
 
 # Environment variables
 .env
@@ -32,10 +25,9 @@ build/
 ehthumbs.db
 Thumbs.db
 
-# Logs (but allow development audit log)
+# Logs
 logs/
 *.log
-!.no-wing/development-audit.log
 
 # Runtime data
 pids/
@@ -46,24 +38,6 @@ pids/
 # Coverage directory used by tools like istanbul
 coverage/
 *.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
 
 # AWS
 .aws/
@@ -84,18 +58,5 @@ q-workspace/
 !.no-wing/config.json
 !.no-wing/status.md
 
-# Test files
-test-*
+# Test output files
 demo-output.txt
-
-# Experimental and development files
-bin/
-docker/
-install-deno.sh
-install-no-sudo.sh
-install.sh
-no-wing
-src/cli/no-sudo.ts
-src/cli/sudo-helper.ts
-src/services/UserNamespaceManager.ts
-deno.lock
