--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "deno test --allow-all tests/no-wing.test.ts",
     "test:manual": "./test-manual.sh",
     "test:all": "deno test --allow-all tests/no-wing.test.ts && ./test-manual.sh",
+    "test:credentials": "ts-node src/test/credential-test.ts",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "clean": "rm -rf dist .no-wing node_modules"
   },
   "keywords": [
@@ -48,11 +51,27 @@
   },
   "files": [
     "deno/",
+    "src/",
+    "dist/",
     "install-deno-final.sh",
     "test-manual.sh",
     "tests/",
     "README.md",
     "LICENSE",
-    "docs/"
-  ]
+    "docs/",
+    "tsconfig.json"
+  ],
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0",
+    "ts-node": "^10.0.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.0.0",
+    "@aws-sdk/client-iam": "^3.0.0",
+    "@aws-sdk/client-lambda": "^3.0.0",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/client-sts": "^3.0.0",
+    "@aws-sdk/credential-providers": "^3.0.0"
+  }
 }
