--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:manual": "./test-manual.sh",
     "test:all": "deno test --allow-all tests/no-wing.test.ts && ./test-manual.sh",
     "test:credentials": "ts-node src/test/credential-test.ts",
+    "test:permissions": "ts-node src/test/permission-test.ts",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist .no-wing node_modules"
@@ -68,6 +69,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.0.0",
+    "@aws-sdk/client-cloudtrail": "^3.0.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.0.0",
     "@aws-sdk/client-iam": "^3.0.0",
     "@aws-sdk/client-lambda": "^3.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
