--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:all": "deno test --allow-all tests/no-wing.test.ts && ./test-manual.sh",
     "test:credentials": "ts-node src/test/credential-test.ts",
     "test:permissions": "ts-node src/test/permission-test.ts",
+    "test:integration": "ts-node src/test/integration-test.ts",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "clean": "rm -rf dist .no-wing node_modules"
@@ -75,6 +76,7 @@
     "@aws-sdk/client-lambda": "^3.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
-    "@aws-sdk/credential-providers": "^3.0.0"
+    "@aws-sdk/credential-providers": "^3.0.0",
+    "commander": "^11.0.0"
   }
 }
