Add prebuild script to clean dist directory
- Ensures clean builds by removing dist before compilation
- Prevents stale build artifacts from accumulating
- Maintains consistency with dist being untracked

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "node bin/no-wing.js",
+    "prebuild": "rm -rf dist",
     "build": "tsc --noEmit false || echo 'TypeScript compilation has issues - using fallback CLI'",
     "build:watch": "tsc --watch --noEmit false || echo 'TypeScript watch mode'",
     "test": "echo 'Tests implemented in src/test/ - run after TypeScript compilation'",
