--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
   ],
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.0.0",
