feat: implement proper Deno testing framework
Testing Infrastructure:
- ✅ Created proper Deno unit tests (context_manager_test.ts)
- ✅ Created CLI integration tests (cli_integration_test.ts)
- ✅ Removed legacy Node.js test files
- ✅ Updated package.json with Deno commands
- ✅ Added comprehensive testing documentation

Test Coverage:
- ✅ ContextManager unit tests (3 tests passing)
- ✅ CLI integration tests (3 tests passing)
- ✅ All tests run with 'deno test --allow-all'

Commands:
- deno test --allow-all src/test/*_test.ts (all tests)
- deno test --allow-all src/test/context_manager_test.ts (unit)
- deno test --allow-all src/test/cli_integration_test.ts (integration)

6/6 tests passing ✅

--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "no-wing": "./bin/no-wing.js"
   },
   "scripts": {
-    "start": "node bin/no-wing.js",
-    "prebuild": "rm -rf dist",
-    "build": "tsc --noEmit false || echo 'TypeScript compilation has issues - using fallback CLI'",
-    "build:watch": "tsc --watch --noEmit false || echo 'TypeScript watch mode'",
-    "test": "echo 'Tests implemented in src/test/ - run after TypeScript compilation'",
-    "test:credentials": "echo 'Credential tests available in src/test/credential-test.ts'",
-    "test:permissions": "echo 'Permission tests available in src/test/permission-test.ts'",
-    "test:integration": "echo 'Integration tests available in src/test/integration-test.ts'",
-    "clean": "rm -rf dist .no-wing node_modules"
+    "start": "echo 'Use: deno run --allow-all main.ts'",
+    "build": "echo 'Use: deno compile --allow-all --output no-wing main.ts'",
+    "test": "echo 'Use: deno test --allow-all src/test/*_test.ts'",
+    "test:unit": "echo 'Use: deno test --allow-all src/test/context_manager_test.ts'",
+    "test:integration": "echo 'Use: deno test --allow-all src/test/cli_integration_test.ts'",
+    "lint": "echo 'Use: deno lint'",
+    "clean": "rm -rf dist .no-wing node_modules no-wing"
   },
   "keywords": [
     "amazon-q",
