feat: implement comprehensive type safety framework
Type Safety Infrastructure:
- ✅ Strict TypeScript configuration in deno.json
- ✅ Automated type safety checker script
- ✅ Fixed all linting issues (no-unused-vars, no-inferrable-types)
- ✅ Added missing AWS SDK type imports
- ✅ Fixed CLI class property initialization

Type Safety Features:
- ✅ Strict mode enabled with key compiler options
- ✅ No implicit any, returns, or this
- ✅ No unreachable code or unused labels
- ✅ Comprehensive linting rules
- ✅ AWS SDK full type coverage

Documentation & Tooling:
- ✅ Comprehensive Type Safety Guide (docs/TYPE_SAFETY.md)
- ✅ Automated type checking script (scripts/check-types.ts)
- ✅ Updated README with type safety commands
- ✅ Package.json scripts for type checking

Quality Assurance:
- ✅ All type checks passing (deno check main.ts)
- ✅ All linting passing (deno lint)
- ✅ All tests passing (6/6 tests)
- ✅ Zero type safety issues

Production Ready:
🛡️ Type-safe codebase with comprehensive checking
🔍 Automated CI/CD type safety verification
📚 Complete developer documentation
🎯 Best practices and troubleshooting guide

Run: deno run --allow-all scripts/check-types.ts

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:unit": "echo 'Use: deno test --allow-all src/test/context_manager_test.ts'",
     "test:integration": "echo 'Use: deno test --allow-all src/test/cli_integration_test.ts'",
     "lint": "echo 'Use: deno lint'",
+    "type-check": "echo 'Use: deno check main.ts'",
+    "type-safety": "echo 'Use: deno run --allow-all scripts/check-types.ts'",
     "clean": "rm -rf dist .no-wing node_modules no-wing"
   },
   "keywords": [
