--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,39 @@
 {
+  "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "checkJs": false,
+    "lib": ["deno.ns", "deno.window"]
+  },
   "lint": {
-    "exclude": ["bin/", "node_modules/"]
+    "rules": {
+      "tags": ["recommended"],
+      "include": [
+        "no-explicit-any",
+        "no-unused-vars",
+        "prefer-const",
+        "no-inferrable-types"
+      ]
+    },
+    "exclude": ["bin/", "node_modules/", "dist/"]
   },
   "fmt": {
-    "exclude": ["bin/", "node_modules/"]
+    "exclude": ["bin/", "node_modules/", "dist/"],
+    "options": {
+      "useTabs": false,
+      "lineWidth": 100,
+      "indentWidth": 2,
+      "semiColons": true,
+      "singleQuote": false,
+      "proseWrap": "preserve"
+    }
+  },
+  "test": {
+    "include": ["src/test/*_test.ts"]
   }
 }
