--- a/deno.json
+++ b/deno.json
@@ -1,13 +1,16 @@
 {
   "tasks": {
     "start": "deno run --allow-read --allow-write --allow-env --allow-net main.ts",
-    "test": "deno test --allow-read --allow-write --allow-env",
-    "compile": "deno compile --allow-read --allow-write --allow-env --allow-net main.ts"
+    "test": "deno test --allow-read --allow-write --allow-env --allow-net --allow-temp",
+    "test:watch": "deno test --watch --allow-read --allow-write --allow-env --allow-net --allow-temp",
+    "test:coverage": "deno test --coverage=coverage --allow-read --allow-write --allow-env --allow-net --allow-temp && deno coverage coverage",
+    "lint": "deno lint",
+    "fmt": "deno fmt",
+    "check": "deno check main.ts"
   },
   "fmt": {
-    "files": {
-      "include": ["**/*.ts"]
-    },
+    "include": ["**/*.ts"],
+    "exclude": ["**/*.test.ts"],
     "options": {
       "useTabs": false,
       "lineWidth": 80,
@@ -15,5 +18,15 @@
       "singleQuote": false,
       "proseWrap": "preserve"
     }
+  },
+  "lint": {
+    "include": ["**/*.ts"],
+    "exclude": ["**/*.test.ts"],
+    "rules": {
+      "include": ["recommended", "ban-untagged-todo"]
+    }
+  },
+  "compilerOptions": {
+    "strict": true
   }
 }
