--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,9 @@
 {
   "tasks": {
-    "start": "deno run --allow-read --allow-write --allow-env=AWS_PROFILE,AWS_REGION,GIT_AUTHOR_NAME,GIT_AUTHOR_EMAIL --allow-net main.ts",
-    "test": "deno test --allow-read --allow-write --allow-env=AWS_PROFILE,AWS_REGION,GIT_AUTHOR_NAME,GIT_AUTHOR_EMAIL --allow-net",
-    "test:watch": "deno test --watch --allow-read --allow-write --allow-env=AWS_PROFILE,AWS_REGION,GIT_AUTHOR_NAME,GIT_AUTHOR_EMAIL --allow-net",
-    "test:coverage": "deno test --coverage=coverage --allow-read --allow-write --allow-env=AWS_PROFILE,AWS_REGION,GIT_AUTHOR_NAME,GIT_AUTHOR_EMAIL --allow-net && deno coverage coverage",
+    "start": "deno run --allow-read --allow-write --allow-env --allow-run --allow-net main.ts",
+    "test": "deno test --allow-read --allow-write --allow-env --allow-run --allow-net",
+    "test:watch": "deno test --watch --allow-read --allow-write --allow-env --allow-run --allow-net",
+    "test:coverage": "deno test --coverage=coverage --allow-read --allow-write --allow-env --allow-run --allow-net && deno coverage coverage",
     "lint": "deno lint",
     "fmt": "deno fmt",
     "check": "deno check main.ts"
