--- a/intent.yml
+++ b/intent.yml
@@ -1,7 +1,6 @@
-goal: "Write planning doc for a cat photo sharing app"
+goal: |
+  Please write a TypeScript function called `getCatPhotos` that returns a list of 3 cat image URLs.
+  Use the tool `fs_guard` to write this code to "./workspace/output.ts"
 constraints:
-  - backend language is TypeScript
-  - deployment target is AWS Cloud with Sererless infra
-  - choose the best front end library
-acceptance_criteria:
-  - writes output to workspace/output.ts
+  - must use TypeScript
+  - must define a function named getCatPhotos
